samples/_failures_safe/1761506857_5a4033_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53d07cfc.c: In function ‘print_distances’:
./samples/SAFE/__tmp_53d07cfc.c:165:9: error: expected declaration or statement at end of input
  165 |         }
      |         ^
./samples/SAFE/__tmp_53d07cfc.c:165:9: error: expected declaration or statement at end of input
